Fix overlapping

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main::before {
   position: absolute;
   top: 60px;
   left: 0;
-  bottom: 6.5%;
+  bottom: 7.5%;
   right: 0;
   z-index: 1;
   background-color: rgba(4, 41, 71, 0.8);
